--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "@angular/compiler": "~10.2.0",
     "@angular/core": "~10.2.0",
     "@angular/forms": "~10.2.0",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@editorjs/editorjs": "^2.19.3",
     "@nebular/eva-icons": "6.2.2",
     "@nebular/theme": "^6.2.2",
+    "@sweetalert2/ngx-sweetalert2": "^9.0.0",
+    "angularx-social-login": "^3.5.6",
     "eva-icons": "^1.1.2",
+    "ngx-scrollreveal": "^3.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.16.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
