--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^2.0.3",
     "@angular/animations": "~10.2.0",
     "@angular/cdk": "^10.2.1",
     "@angular/common": "~10.2.0",
@@ -27,7 +28,9 @@
     "@sweetalert2/ngx-sweetalert2": "^9.0.0",
     "angularx-social-login": "^3.5.6",
     "eva-icons": "^1.1.2",
+    "i": "^0.3.6",
     "ngx-scrollreveal": "^3.0.0",
+    "npm": "^7.12.0",
     "rxjs": "~6.6.0",
     "socket.io-client": "^4.0.1",
     "sweetalert2": "^10.16.6",
