--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@editorjs/editorjs": "^2.19.3",
-    "@nebular/eva-icons": "6.2.2",
-    "@nebular/theme": "^6.2.2",
+    "@nebular/eva-icons": "^7.0.0",
+    "@nebular/theme": "^7.0.0",
     "@sweetalert2/ngx-sweetalert2": "^9.0.0",
     "angularx-social-login": "^3.5.6",
     "eva-icons": "^1.1.2",
