--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
     "socket.io": "^4.0.2",
     "stripe": "^8.150.0"
