--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rxjs": "~6.6.0",
     "socket.io-client": "^4.0.2",
     "sweetalert2": "^10.16.6",
+    "swiper": "^6.7.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
